Change linkedin and twitter images. Add hover effect for both. Fix scrollbar in code_journal (mysteriously became untransparent).

--- a/styles/about.css
+++ b/styles/about.css
@@ -119,6 +119,17 @@ footer h4 {
   color: white;
 }
 
+footer img {
+  border: 2px solid black;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+}
+
+footer img:hover {
+  border: 2px solid white;
+}
+
 /******************/
 /*    Clearfix     */
 /*****************/
