--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,12 @@ footer h4 {
 footer img {
   height: 25px;
   width: 25px;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+
+footer img:hover {
+  border: 1px solid black;
 }
 
 footer ul {
